--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
     "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
